<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.slagalica.ui.home.HomeFragment"
        android:label="Home">

        <action
            android:id="@+id/action_home_to_mojBroj"
            app:destination="@id/mojBrojFragment" />

        <action
            android:id="@+id/action_home_to_associations"
            app:destination="@id/associationsFragment" />

        <action
            android:id="@+id/action_home_to_skocko"
            app:destination="@id/skockoFragment" />

        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/notificationsFragment" />

        <action
            android:id="@+id/action_home_to_dailyMissions"
            app:destination="@id/dailyMissionsFragment" />

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment" />

        <action
            android:id="@+id/action_home_to_inviteFriends"
            app:destination="@id/inviteFriendsFragment" />

        <action
            android:id="@+id/action_home_to_onlineMatchmaking"
            app:destination="@id/onlineMatchmakingFragment" />

        <action
            android:id="@+id/action_home_to_tournament"
            app:destination="@id/tournamentFragment" />

        <action
            android:id="@+id/action_home_to_roomSession"
            app:destination="@id/roomSessionFragment" />

        <action
            android:id="@+id/action_home_to_koZnaZna"
            app:destination="@id/koZnaZnaMatchmakingFragment" />

        <action
            android:id="@+id/action_home_to_spojnice"
            app:destination="@id/spojniceFragment" />

        <action
            android:id="@+id/action_home_to_regionMap"
            app:destination="@id/regionMapFragment" />

        <action
            android:id="@+id/action_home_to_ranking"
            app:destination="@id/rankingFragment" />

        <action
            android:id="@+id/action_profile_to_changePassword"
            app:destination="@id/changePassword" />

        <action
            android:id="@+id/action_home_to_regionChat"
            app:destination="@id/regionChatFragment" />

        <action
            android:id="@+id/action_regionMap_to_challengeSession"
            app:destination="@id/challengeSessionFragment" />


    </fragment>

    <fragment
        android:id="@+id/mojBrojFragment"
        android:name="com.example.slagalica.ui.games.MyNumberFragment"
        android:label="Moj Broj" />

    <fragment
        android:id="@+id/stepByStepFragment"
        android:name="com.example.slagalica.ui.games.StepByStepFragment"
        android:label="Korak po korak" />

    <fragment
        android:id="@+id/associationsFragment"
        android:name="com.example.slagalica.ui.games.AssociationsFragment"
        android:label="Asocijacije" />

    <fragment
        android:id="@+id/skockoFragment"
        android:name="com.example.slagalica.ui.games.SkockoFragment"
        android:label="Skočko" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.slagalica.ui.notifications.NotificationsFragment"
        android:label="Notifikacije" />

    <fragment
        android:id="@+id/dailyMissionsFragment"
        android:name="com.example.slagalica.ui.missions.DailyMissionsFragment"
        android:label="@string/daily_missions_title">

        <action
            android:id="@+id/action_dailyMissions_to_onlineMatchmaking"
            app:destination="@id/onlineMatchmakingFragment" />

        <action
            android:id="@+id/action_dailyMissions_to_regionChat"
            app:destination="@id/regionChatFragment" />

        <action
            android:id="@+id/action_dailyMissions_to_inviteFriends"
            app:destination="@id/inviteFriendsFragment" />

        <action
            android:id="@+id/action_dailyMissions_to_tournament"
            app:destination="@id/tournamentFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationDestinationFragment"
        android:name="com.example.slagalica.ui.notifications.NotificationDestinationFragment"
        android:label="@string/notification_destination_default_title" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.slagalica.ui.profile.ProfileFragment"
        android:label="@string/profile_title" />

    <fragment
        android:id="@+id/inviteFriendsFragment"
        android:name="com.example.slagalica.ui.friends.FriendsFragment"
        android:label="@string/friends_title" />

    <fragment
        android:id="@+id/onlineMatchmakingFragment"
        android:name="com.example.slagalica.ui.matchmaking.OnlineMatchmakingFragment"
        android:label="@string/online_matchmaking_title" />

    <fragment
        android:id="@+id/tournamentFragment"
        android:name="com.example.slagalica.ui.tournament.TournamentFragment"
        android:label="@string/tournament_title" />

    <fragment
        android:id="@+id/roomSessionFragment"
        android:name="com.example.slagalica.ui.room.RoomSessionFragment"
        android:label="@string/room_session_title" />

    <fragment
        android:id="@+id/koZnaZnaMatchmakingFragment"
        android:name="com.example.slagalica.ui.games.KoZnaZnaMatchmakingFragment"
        android:label="@string/kzz_matchmaking_title">

        <action
            android:id="@+id/action_matchmaking_to_game"
            app:destination="@id/koZnaZnaFragment" />
    </fragment>

    <fragment
        android:id="@+id/koZnaZnaFragment"
        android:name="com.example.slagalica.ui.games.KoZnaZnaFragment"
        android:label="@string/game_ko_zna_zna" />

    <fragment
        android:id="@+id/spojniceFragment"
        android:name="com.example.slagalica.ui.games.SpojniceFragment"
        android:label="@string/game_spojnice" />

    <fragment
        android:id="@+id/changePassword"
        android:name="com.example.slagalica.ui.profile.ChangePasswordFragment"
        android:label="@string/change_password" />

    <fragment
        android:id="@+id/regionMapFragment"
        android:name="com.example.slagalica.ui.region.RegionMapFragment"
        android:label="@string/region_map_title">

        <action
            android:id="@+id/action_regionMap_to_leaderboard"
            app:destination="@id/regionLeaderboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/regionLeaderboardFragment"
        android:name="com.example.slagalica.ui.region.RegionLeaderboardFragment"
        android:label="@string/region_leaderboard_title" />

    <fragment
        android:id="@+id/rankingFragment"
        android:name="com.example.slagalica.ui.ranking.RankingFragment"
        android:label="@string/ranking_title" />

    <fragment
        android:id="@+id/regionChatFragment"
        android:name="com.example.slagalica.ui.chat.RegionChatFragment"
        android:label="@string/region_chat_title" />

    <fragment
        android:id="@+id/challengeSessionFragment"
        android:name="com.example.slagalica.ui.challenge.ChallengeSessionFragment"
        android:label="@string/challenge_session_title" />

</navigation>
